Website v2 it need to fix to be responsive

--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>COXCOX AI</title>
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="content-section">
+        <h1>
+          Reemplaza tu equipo de telemarketing con el agente de inteligencia
+          artificial de Coxcox AI
+        </h1>
+
+        <p class="description">
+          El agente está diseñado para realizar el trabajo de telemarketing
+          ayudando a los clientes con las siguientes tareas:
+        </p>
+
+        <ul class="features-list">
+          <li>Atender sus consultas</li>
+          <li>Brindar soporte</li>
+          <li>Tomar pedidos de los clientes</li>
+          <li>
+            Ingresar pedidos a la base de datos de la empresa en la que está
+            trabajando el agente de inteligencia artificial
+          </li>
+          <li>Obtener información sobre los productos de la empresa</li>
+          <li>Solicitar estados de pedidos</li>
+        </ul>
+      </div>
+
+      <div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/JqEQ100Dd0w?si=-_f40wnZU4nEMh6g"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <div class="buttons-container">
+          <a href="#" class="button">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <rect x="3" y="5" width="18" height="14" rx="2" />
+              <polyline points="3 7 12 13 21 7" />
+            </svg>
+            contactame
+          </a>
+          <a href="#" class="button">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2v10z"
+              />
+            </svg>
+            Contacta con mi agente
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
