--- a/website/index.html
+++ b/website/index.html
@@ -37,18 +37,16 @@
       </div>
 
       <div>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/JqEQ100Dd0w?si=-_f40wnZU4nEMh6g"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin"
-          allowfullscreen
-        ></iframe>
+        <div class="video-container">
+          <iframe
+            src="https://www.youtube.com/embed/JqEQ100Dd0w?si=-_f40wnZU4nEMh6g"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
         <div class="buttons-container">
-          <a href="#" class="button">
+          <a href="mailto:albertog1meza@gmail.com" class="button">
             <svg
               viewBox="0 0 24 24"
               fill="none"
@@ -60,7 +58,12 @@
             </svg>
             contactame
           </a>
-          <a href="#" class="button">
+          <a
+            href="https://api.whatsapp.com/send?phone=+1234567890&text=Me%20encant%C3%B3%20el%20video%2C%20%C2%BFc%C3%B3mo%20funciona%20el%20agente%20de%20IA%3F"
+            class="button"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg
               viewBox="0 0 24 24"
               fill="none"
@@ -76,5 +79,6 @@
         </div>
       </div>
     </div>
+    <footer>&copy; 2025 COXCOX AI. Todos los derechos reservados.</footer>
   </body>
 </html>
