Added metadata config

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COXCOX AI</title>
+
+    <!-- Primary Meta Tags -->
+    <title>
+      COXCOX AI - Agente de Inteligencia Artificial para Telemarketing |
+      Automatización de Ventas
+    </title>
+    <meta
+      name="title"
+      content="COXCOX AI - Agente de Inteligencia Artificial para Telemarketing | Automatización de Ventas"
+    />
+    <meta
+      name="description"
+      content="Moderniza tu equipo de telemarketing con nuestro agente de IA. Automatiza consultas, pedidos y soporte al cliente. Solución integral de atención al cliente 24/7 con inteligencia artificial avanzada."
+    />
+    <meta
+      name="keywords"
+      content="telemarketing IA, agente virtual, automatización ventas, inteligencia artificial, atención al cliente, COXCOX AI, bot telemarketing, servicio al cliente automatizado"
+    />
+    <meta name="author" content="COXCOX AI" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Spanish" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://coxcoxai.com/" />
+    <meta
+      property="og:title"
+      content="COXCOX AI - Revoluciona tu Telemarketing con Inteligencia Artificial"
+    />
+    <meta
+      property="og:description"
+      content="Transforma tu equipo de telemarketing con nuestro agente de IA. Gestión automática de consultas, pedidos y soporte al cliente 24/7."
+    />
+    <meta property="og:image" content="https://coxcoxai.com/coxcox-logo.webp" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://coxcoxai.com/" />
+    <meta
+      property="twitter:title"
+      content="COXCOX AI - Revoluciona tu Telemarketing con IA"
+    />
+    <meta
+      property="twitter:description"
+      content="Transforma tu equipo de telemarketing con nuestro agente de IA. Gestión automática de consultas, pedidos y soporte al cliente 24/7."
+    />
+    <meta
+      property="twitter:image"
+      content="https://coxcoxai.com/coxcox-logo.webp"
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <link rel="canonical" href="https://coxcoxai.com/" />
+    <meta name="geo.region" content="MX" />
+    <meta name="geo.position" content="23.634501;-102.552784" />
+    <meta name="geo.placename" content="México" />
+
     <link rel="stylesheet" href="index.css" />
     <link
       rel="stylesheet"
